Fix for number input fields, removed spinners. Added viewport meta tag to fix view on mobile devices.

--- a/web/src/main/webapp/resources/styles/app.css
+++ b/web/src/main/webapp/resources/styles/app.css
@@ -1,3 +1,9 @@
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 html, body {
     line-height: 24px;
     height: 100%!important;
